// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DualListSelector basic 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-dual-list-selector__pane pf-m-available"
    options="Option 1,Option 2"
  >
    <div
      class="pf-v5-c-dual-list-selector__menu"
      tabindex="0"
    >
      <ul
        class="pf-v5-c-dual-list-selector__list"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector basic with disabled controls 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-dual-list-selector__pane pf-m-available"
    options="Option 1,Option 2"
  >
    <div
      class="pf-v5-c-dual-list-selector__menu"
      tabindex="0"
    >
      <ul
        class="pf-v5-c-dual-list-selector__list"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with custom status 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-dual-list-selector__pane pf-m-available"
    options="Option 1,Option 2"
  >
    <div
      class="pf-v5-c-dual-list-selector__status"
    >
      <div
        class="pf-v5-c-dual-list-selector__status-text"
        id="thirdTest-status"
      >
        Test status1
      </div>
    </div>
    <div
      class="pf-v5-c-dual-list-selector__menu"
      tabindex="0"
    >
      <ul
        class="pf-v5-c-dual-list-selector__list"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with search inputs 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-dual-list-selector__pane pf-m-available"
    options="Option 1,Option 2"
  >
    <div
      class="pf-v5-c-dual-list-selector__menu"
      tabindex="0"
    >
      <ul
        class="pf-v5-c-dual-list-selector__list"
      />
    </div>
  </div>
</DocumentFragment>
`;
